tests/compile_fail/shadowed_import.olrn
# shadowing an import alias is banned (codegen would emit wrong code
# for local.field) — every binding below must FAIL
@import (
    std = @std,
)

fn param_shadow(std: i64) -> i64
{
    ret std * 2
}

fn main() -> void
{
    std := 42            # var shadow
    @pl(std)
    for std => "abc" {   # for-each binding shadow
        @pl(std)
    }
    @pl(param_shadow(3))
    @pl(std.math.PI)     # refers to the LOCAL std here, so the import is
                         # also reported unused — 4 errors total
}
